<resources>
    <string name="app_name">HealthChatbotApp</string>
    <string name="welcome_title">Welcome to HealthBot</string>
    <string name="welcome_subtitle">Please sign in to continue</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="hello_world">Hello, world!</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_a_message">Type a message…</string>
    <string name="send">send</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>

    <string-array name="language_options">
        <item>English</item>
        <item>Türkçe</item>
    </string-array>

    <string name="open_drawer">Open menu</string>
    <string name="close_drawer">Close menu</string>
    <string name="apply">Apply</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>

    <string name="no_network_title">No Internet Connection</string>
    <string name="no_network_message">Please check your Wi-Fi or mobile data and try again.</string>

    <string name="profile_title">Cockpit</string>
    <string name="username_label">Username: %s</string>
    <string name="dob_label_not_set">Date of Birth: not set</string>
    <string name="dob_label">Date of Birth: %s</string>
    <string name="choose_dob">Set Date of Birth</string>


</resources>
